@@ -78,66 +78,6 @@ class DirectoryTool(UniqueObject, Folder):
         res.sort()
         return res
 
-    security.declarePrivate('_crossGetList')
-    def _crossGetList(self, dir_id, field_id, value):
-        """Return the list of entry ids of 'dir_id' such that 'value' is in
-        'field_id'
-
-        'field_id' is assumed to be a String List Field of 'dir_id'
-
-        This method is used in the computed 'members' field of the groups
-        directory's schema to list all members that belong to some group.
-        """
-        dir = self[dir_id]
-        stool = getToolByName(self, 'portal_schemas')
-        if field_id not in stool[dir.schema].keys():
-            raise KeyError("%s not in %s's fields" % (field_id, dir_id))
-        return dir._searchEntries(**{field_id: [value]})
-
-    security.declarePrivate('_crossSetList')
-    def _crossSetList(self, dir_id, field_id, value, entry_ids):
-        """Update the field 'field_id' of 'dir_id' so that only entries of
-        'dir_id' occuring in 'entry_ids' have 'value' in 'field_id'
-
-        'field_id' is assumed to be a String List Field of 'dir_id'
-
-        This method is used in the computed 'members' field of the groups
-        directory's schema to write the list of members that belong to some
-        group.
-        """
-        dir = self[dir_id]
-        entry_ids = set(entry_ids)
-        with_value = dir._searchEntries(return_fields=[field_id],
-                                        **{field_id: [value]})
-        ids_with_value = [id for id, e in with_value]
-        for id, entry in with_value:
-            if id in entry_ids:
-                continue
-            # Remove the value from the field
-            values = entry[field_id]
-            if value not in values:
-                # Sanity check, in case the search had weird semantics
-                continue
-            values.remove(value)
-            new_entry = {
-                dir.id_field: id,
-                field_id: values,
-                }
-            entry = dir._editEntry(new_entry)
-        for id in entry_ids.difference(ids_with_value):
-            entry = dir._getEntryKW(id, field_ids=[field_id])
-            # Add the value to the field
-            values = entry[field_id]
-            if value in values:
-                # Sanity check, in case the search had weird semantics
-                continue
-            values.append(value)
-            new_entry = {
-                dir.id_field: id,
-                field_id: values,
-                }
-            entry = dir._editEntry(new_entry) 
-
     #
     # ZMI
     #
