@@ -12,6 +12,8 @@ from Products.CPSDirectory.tests.fakeCps import FakeSchemasTool
 from Products.CPSDirectory.tests.fakeCps import FakeRoot
 
 from Products.CPSDirectory.DirectoryTool import DirectoryTool
+from Products.CPSDirectory.FieldNamespace import crossGetList
+from Products.CPSDirectory.FieldNamespace import crossSetList
 
 class TestDirectoryTool(ZopeTestCase):
 
@@ -70,45 +72,51 @@ class TestDirectoryTool(ZopeTestCase):
         self.assertEquals(dir_list, ['members'])
 
     def test_crossGetList(self):
-        dir, pd = self.dir, self.pd
+        # crossGetList is a utility function that should be registered on the
+        # CPSSchemas.FieldNamespace.util object but we can test it directly on
+        # the fake portal object as well
+        dir, portal = self.dir, self.portal
         dir_id = dir.getId()
         dir.createEntry({'id': 'user1', 'groups': ['group1', 'group2']})
         dir.createEntry({'id': 'user2', 'groups': ['group1', 'group3']})
         dir.createEntry({'id': 'user3', 'groups': []})
-        in_group1 = pd._crossGetList(dir_id, 'groups', 'group1')
+        in_group1 = crossGetList(portal, dir_id, 'groups', 'group1')
         self.assertEquals(in_group1, ['user1', 'user2'])
-        in_group2 = pd._crossGetList(dir_id, 'groups', 'group2')
+        in_group2 = crossGetList(portal, dir_id, 'groups', 'group2')
         self.assertEquals(in_group2, ['user1'])
-        in_group3 = pd._crossGetList(dir_id, 'groups', 'group3')
+        in_group3 = crossGetList(portal, dir_id, 'groups', 'group3')
         self.assertEquals(in_group3, ['user2'])
 
         # Special cases
-        in_group4 = pd._crossGetList(dir.getId(), 'groups', 'group4')
+        in_group4 = crossGetList(portal, dir.getId(), 'groups', 'group4')
         self.assertEquals(in_group4, [])
         self.assertRaises(KeyError,
-                lambda: pd._crossGetList(dir.getId(), 'not_existing', 'group1'))
+            lambda: crossGetList(portal, dir.getId(), 'not_existing', 'group1'))
 
     def test_crossSetList(self):
-        dir, pd = self.dir, self.pd
+        # crossSetList is a utility function that should be registered on the
+        # CPSSchemas.FieldNamespace.util object but we can test it directly on
+        # the fake portal object as well
+        dir, portal = self.dir, self.portal
         dir_id = dir.getId()
         # Initial setting
         dir.createEntry({'id': 'user1', 'groups': ['group1', 'group2']})
         dir.createEntry({'id': 'user2', 'groups': []})
         dir.createEntry({'id': 'user3', 'groups': []})
         # This should not change anything
-        pd._crossSetList(dir_id, 'groups', 'group1', ['user1'])
+        crossSetList(portal, dir_id, 'groups', 'group1', ['user1'])
         self.assertEquals(dir.searchEntries(groups='group1'), ['user1'])
         self.assertEquals(dir.searchEntries(groups='group2'), ['user1'])
 
         # Adding users to a new group
-        pd._crossSetList(dir_id, 'groups', 'group3', ['user1', 'user2'])
+        crossSetList(portal, dir_id, 'groups', 'group3', ['user1', 'user2'])
         self.assertEquals(dir.searchEntries(groups='group1'), ['user1'])
         self.assertEquals(dir.searchEntries(groups='group2'), ['user1'])
         self.assertEquals(dir.searchEntries(groups='group3'),
                                             ['user1', 'user2'])
 
         # Removing users already in group3
-        pd._crossSetList(dir_id, 'groups', 'group3', [])
+        crossSetList(portal, dir_id, 'groups', 'group3', [])
         self.assertEquals(dir.searchEntries(groups='group1'), ['user1'])
         self.assertEquals(dir.searchEntries(groups='group2'), ['user1'])
         self.assertEquals(dir.searchEntries(groups='group3'), [])
@@ -116,7 +124,7 @@ class TestDirectoryTool(ZopeTestCase):
         # Unexisting user triggers KeyError
         # XXX: is this the same behavior for all directory backends?
         self.assertRaises(KeyError,
-                lambda:pd._crossSetList(dir_id, 'groups', 'group1',
+                lambda:crossSetList(portal, dir_id, 'groups', 'group1',
                                         ['fake_user']))
 
 
